# PortAMP

./: .gitmodules  CMakeLists.txt  CMakeLists_Apple.txt  LICENSE  README.md
libs/flac-1.3.1/: CMakeLists.txt
libs/flac-1.3.1/PaxHeaders.20420/: COPYING.FDL  COPYING.GPL  COPYING.LGPL  COPYING.Xiph  FLAC-vs2005.sln  FLAC.sln  Makefile.am  Makefile.in  Makefile.lite  README  aclocal.m4  ar-lib  autogen.sh  build  config.h.in  config.rpath  config.sub  configure  configure.ac  depcomp  doc  examples  include  ltmain.sh  m4  man  missing  objs  src  strip_non_asm_libtool_args.sh  test
libs/flac-1.3.1/examples/PaxHeaders.20420/: Makefile.in  Makefile.lite  README  c  cpp
libs/flac-1.3.1/examples/c/PaxHeaders.20420/: Makefile.in  decode  encode
libs/flac-1.3.1/examples/cpp/PaxHeaders.20420/: Makefile.in  decode  encode
libs/flac-1.3.1/include/FLAC++/PaxHeaders.20420/: Makefile.in  all.h  decoder.h
libs/flac-1.3.1/include/FLAC/PaxHeaders.20420/: Makefile.am  Makefile.in  callback.h  ordinals.h
libs/flac-1.3.1/include/PaxHeaders.20420/: FLAC  FLAC++  Makefile.in  share  test_libs_common
libs/flac-1.3.1/include/share/PaxHeaders.20420/: Makefile.am  Makefile.in  getopt.h  grabbag.h  replaygain_analysis.h  safe_str.h  utf8.h
libs/flac-1.3.1/include/test_libs_common/PaxHeaders.20420/: Makefile.am  Makefile.in  file_utils_flac.h
libs/flac-1.3.1/m4/PaxHeaders.20420/: Makefile.in  add_cflags.m4  add_cxxflags.m4  clang.m4  codeset.m4  endian.m4  gcc_version.m4  lib-link.m4  lib-prefix.m4  libtool.m4  ltversion.m4  lt~obsolete.m4  ogg.m4  really_gcc.m4  stack_protect.m4  xmms.m4
libs/flac-1.3.1/man/PaxHeaders.20420/: Makefile.am  Makefile.in  flac.1  flac.sgml  metaflac.sgml
libs/flac-1.3.1/objs/PaxHeaders.20420/: Makefile.am  Makefile.in  debug
libs/flac-1.3.1/objs/debug/PaxHeaders.20420/: Makefile.am  Makefile.in  bin  lib
libs/flac-1.3.1/objs/release/PaxHeaders.20420/: Makefile.am  Makefile.in  bin  lib
libs/flac-1.3.1/src/PaxHeaders.20420/: Makefile.am  Makefile.in  Makefile.lite  flac  libFLAC  libFLAC++  metaflac  plugin_common  plugin_xmms  share  test_grabbag  test_libFLAC  test_libFLAC++  test_libs_common  test_seeking  test_streams
libs/flac-1.3.1/src/flac/PaxHeaders.20420/: Makefile.in  Makefile.lite  analyze.h  decode.c  decode.h  flac.vcproj  flac.vcxproj.filters  iffscan.vcproj  iffscan.vcxproj  local_string_utils.c  main.c  utils.c  utils.h  vorbiscomment.c
libs/flac-1.3.1/src/libFLAC/: bitreader.c
libs/flac-1.3.1/src/libFLAC++/PaxHeaders.20420/: Makefile.am  Makefile.in  flac++.pc.in  libFLAC++.m4  libFLAC++_dynamic.vcproj  libFLAC++_dynamic.vcxproj  libFLAC++_dynamic.vcxproj.filters  metadata.cpp
libs/flac-1.3.1/src/libFLAC/PaxHeaders.20420/: Makefile.in  Makefile.lite  bitreader.c  cpu.c  crc.c  fixed.c  fixed_intrin_sse2.c  fixed_intrin_ssse3.c  flac.pc.in  ia32  include  libFLAC.m4  libFLAC_dynamic.vcproj  libFLAC_dynamic.vcxproj  libFLAC_dynamic.vcxproj.filters  libFLAC_static.vcproj  libFLAC_static.vcxproj  libFLAC_static.vcxproj.filters  lpc_intrin_sse2.c  lpc_intrin_sse41.c  md5.c  memory.c  metadata_object.c  ogg_encoder_aspect.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  stream_encoder_intrin_avx2.c  stream_encoder_intrin_sse2.c  stream_encoder_intrin_ssse3.c  window.c
libs/flac-1.3.1/src/metaflac/PaxHeaders.20420/: Makefile.in  Makefile.lite  metaflac.vcproj  metaflac.vcxproj.filters  operations_shorthand_picture.c  operations_shorthand_seektable.c
libs/flac-1.3.1/src/plugin_common/PaxHeaders.20420/: Makefile.in  README  all.h  charset.h  dither.h  plugin_common_static.vcproj  plugin_common_static.vcxproj  plugin_common_static.vcxproj.filters
libs/flac-1.3.1/src/plugin_xmms/PaxHeaders.20420/: Makefile.in  Makefile.lite  charset.h  configure.h  fileinfo.c  http.c  plugin.h  tag.c
libs/flac-1.3.1/src/share/PaxHeaders.20420/: Makefile.in  Makefile.lite  README  getopt  grabbag  replaygain_analysis  replaygain_synthesis  utf8  win_utf8_io
libs/flac-1.3.1/src/test_grabbag/PaxHeaders.20420/: Makefile.in  cuesheet  picture
libs/flac-1.3.1/src/test_libFLAC++/PaxHeaders.20420/: Makefile.in  encoders.h  main.cpp  metadata.cpp  test_libFLAC++.vcproj  test_libFLAC++.vcxproj  test_libFLAC++.vcxproj.filters
libs/flac-1.3.1/src/test_libFLAC/PaxHeaders.20420/: Makefile.in  endswap.h  format.c  format.h  md5.c  md5.h  test_libFLAC.vcproj  test_libFLAC.vcxproj
libs/flac-1.3.1/src/test_libs_common/PaxHeaders.20420/: Makefile.am  Makefile.in  README  metadata_utils.c  test_libs_common_static.vcproj  test_libs_common_static.vcxproj.filters
libs/flac-1.3.1/src/test_seeking/PaxHeaders.20420/: Makefile.in  main.c  test_seeking.vcxproj  test_seeking.vcxproj.filters
libs/flac-1.3.1/src/test_streams/PaxHeaders.20420/: Makefile.am  Makefile.in  main.c  test_streams.vcproj
libs/flac-1.3.1/src/utils/PaxHeaders.20420/: Makefile.in  flacdiff  flactimer
libs/flac-1.3.1/test/PaxHeaders.20420/: Makefile.am  Makefile.in  Makefile.lite  cuesheet.ok  cuesheets  flac-to-flac-metadata-test-files  metaflac-test-files  metaflac.flac.in  metaflac.flac.ok  picture.ok  pictures  test_bins.sh  test_compression.sh  test_libFLAC.sh  test_replaygain.sh  test_seeking.sh  test_streams.sh  write_iff.pl
libs/flac-1.3.1/test/cuesheets/PaxHeaders.20420/: Makefile.am  Makefile.in  bad.000.CATALOG_multiple.cue  bad.001.CATALOG_missing_number.cue  (+47 more)
libs/id3v2lib/: CMakeLists.txt
libs/id3v2lib/include/: id3v2lib.h
libs/id3v2lib/include/id3v2lib/: header.h  util.h
libs/id3v2lib/src/: CMakeLists.txt  frame.cpp  header.cpp  id3v2lib.cpp  types.cpp  util.cpp
libs/libmodplug-0.8.8.5/: CMakeLists.txt  Makefile.in  configure
libs/libmodplug-0.8.8.5/src/: load_abc.cpp  sndfile.cpp
libs/libogg-1.3.2/: CMakeLists.txt
libs/libopus/: CMakeLists.txt
libs/libopusfile/: CMakeLists.txt
libs/libvorbis-1.3.5/: CMakeLists.txt
libs/minimp3/: CMakeLists.txt  minimp3.c
libs/monkey-audio/: APEDecompress.cpp  APEDecompress.h  BitArray.cpp  CMakeLists.txt  UnBitArray.cpp  config.h  readme.txt
libs/monkey-audio/Shared/: All.h  NoWindows.h
(+132 files in other folders)
